update tests for transfer channel field addition
