# docs/swagger.yml
@@ -1659,7 +1659,10 @@ paths:
                         protobuf release, and it is not used for type URLs
                         beginning with
 
-                        type.googleapis.com.
+                        type.googleapis.com. As of May 2023, there are no widely
+                        used type server
+
+                        implementations and no plans to implement one.
 
 
                         Schemes other than `http`, `https` (or the empty scheme)
@@ -1704,6 +1707,10 @@ paths:
                         if (any.is(Foo.class)) {
                           foo = any.unpack(Foo.class);
                         }
+                        // or ...
+                        if (any.isSameTypeAs(Foo.getDefaultInstance())) {
+                          foo = any.unpack(Foo.getDefaultInstance());
+                        }
 
                      Example 3: Pack and unpack a message in Python.
 
@@ -1741,7 +1748,6 @@ paths:
                     type
 
                     name "y.z".
-
 
 
                     JSON
@@ -1970,7 +1976,10 @@ paths:
                         protobuf release, and it is not used for type URLs
                         beginning with
 
-                        type.googleapis.com.
+                        type.googleapis.com. As of May 2023, there are no widely
+                        used type server
+
+                        implementations and no plans to implement one.
 
 
                         Schemes other than `http`, `https` (or the empty scheme)
@@ -2015,6 +2024,10 @@ paths:
                         if (any.is(Foo.class)) {
                           foo = any.unpack(Foo.class);
                         }
+                        // or ...
+                        if (any.isSameTypeAs(Foo.getDefaultInstance())) {
+                          foo = any.unpack(Foo.getDefaultInstance());
+                        }
 
                      Example 3: Pack and unpack a message in Python.
 
@@ -2052,7 +2065,6 @@ paths:
                     type
 
                     name "y.z".
-
 
 
                     JSON
@@ -3194,6 +3206,8 @@ paths:
                         type: string
                   dust_threshold:
                     type: string
+                  transfer_channel:
+                    type: string
               stats:
                 type: object
                 properties:
@@ -3532,6 +3546,8 @@ paths:
                         base_chainID:
                           type: string
                     dust_threshold:
+                      type: string
+                    transfer_channel:
                       type: string
               stats:
                 type: array
